--- a/templates/bom_tree.html
+++ b/templates/bom_tree.html
@@ -159,8 +159,8 @@
                     <a href="{{ url_for('add_bom') }}?parent_item_id={{ item.item_id }}" class="btn btn-primary btn-sm">
                         <i class="fas fa-plus"></i> BOM構成追加
                     </a>
-                    <a href="{{ url_for('index') }}" class="btn btn-secondary btn-sm">
-                        <i class="fas fa-arrow-left"></i> 戻る
+                    <a href="{{ url_for('items_list') }}" class="btn btn-secondary btn-sm">
+                        <i class="fas fa-arrow-left"></i> アイテム一覧に戻る
                     </a>
                 </div>
             </div>
