--- a/templates/add_item.html
+++ b/templates/add_item.html
@@ -157,13 +157,13 @@
                     </div>
                     
                     <!-- ボタン -->
-                    <div class="d-flex justify-content-between mt-4">
-                        <a href="{{ url_for('index') }}" class="btn btn-secondary">
-                            <i class="fas fa-arrow-left"></i> 戻る
-                        </a>
+                    <div class="text-center">
                         <button type="submit" class="btn btn-primary">
-                            <i class="fas fa-save"></i> 追加
+                            <i class="fas fa-save"></i> 保存
                         </button>
+                        <a href="{{ url_for('items_list') }}" class="btn btn-secondary">
+                            <i class="fas fa-times"></i> キャンセル
+                        </a>
                     </div>
                 </form>
             </div>
